# ASC24-Final-GoMars

./: .gitignore  .gitmodules  1Nbatch_run.sh  1Nfinal_run.sh  2Nbatch_run.sh  2Nfinal_run.sh  3Nbatch_run.sh  3Nfinal_run.sh  4Nfinal_run.sh  5Nbatch_run.sh  5Nfinal_run.sh  CMakeLists.txt  README.md  batch_nh.sh  batch_run.sh  bind_cpu.sh  build_esmf.sh  build_fox.sh  build_gmcore.sh  build_gptl.sh  build_mct.sh  build_netcdf.sh  build_pio.sh  env.sh  env_xyw.sh  find_so_deps.sh  gomars_all_in_one.sh  gomars_clean.sh  install_conda.sh  modifications.md  modifications.sh.md  nvenv.sh  pull_data.py  pull_libs.py  ramfsrun.sh  run.sh  run_conda.sh  run_tests.py  setup_ncl.sh  single.txt  (+5 more)
gmcore/: CMakeLists.txt  README.md  analyzefile.ncl  copy_mod.F90  gmcore_select_run.sh  prepare_dir.sh  pull_libs.py  run.sh  run_tests.py  select_run.sh  timing.000000  timing.000001
gmcore/lib/avx/: avx_interface.cpp  compile.sh
gmcore/src/chemistry/: CMakeLists.txt
gmcore/src/drivers/: gmcore_adv_driver.F90  gmcore_driver.F90  gmcore_swm_driver.F90
gmcore/src/dynamics/: dynamics_types_mod.F90  filter_mod.F90  gmcore_mod.F90  interp_mod.F90  nh_mod.F90  operators_mod.F90  time_schemes_mod.F90  tracer_mod.F90  tracer_types_mod.F90
gmcore/src/physics/: physics_mesh_mod.F90  physics_mod.F90  physics_types_mod.F90
gmcore/src/prepare/: prepare_mod.F90
gmcore/src/tests/: aquaplanet_test_mod.F90  baroclinic_wave_test_mod.F90  held_suarez_test_mod.F90  ksp15_test_mod.F90  mars_cold_run_mod.F90  mountain_wave_test_mod.F90  rossby_haurwitz_wave_3d_test_mod.F90  steady_state_test_mod.F90
gmcore/src/utils/: allocator_mod.F90  const_mod.F90  debug_mod.F90  formula_mod.F90  gas_mod.F90  math_mod.F90  namelist_mod.F90  perf_mod.F90  restart_mod.F90  sphere_geometry_mod.F90  time_mod.F90  tridiag_mkl_mod.F90  tridiag_mod.F90
gmcore/tools/: plot_hs.py  plot_levels.py  plot_ss.ncl  wrf_vert_coord.py
lib/: noahmp.diff  rrtmgp.diff
script/: run.sh
script/gmcore/: build_gmcore.sh
script/ncl/: adv_verify_answer.ncl  normal_verify_answer.ncl  swm_verify_answer.ncl
src/chemistry/: CMakeLists.txt
src/chemistry/aerosol/: drydep_mod.F90
src/chemistry/bulk_aero/: aero_model.F90
src/chemistry/modal_aero/: aero_model.F90  modal_aero_data.F90
src/chemistry/mozart/: gas_wetdep_opts.F90  mo_gas_phase_chemdr.F90  mo_sad.F90  mo_tgcm_ubc.F90  upper_bc.F90
src/chemistry/pp_none/: chemistry.F90
src/chemistry/utils/: aerodep_flx.F90  mo_flbc.F90  mo_msis_ubc.F90  modal_aero_deposition.F90  modal_aero_wateruptake.F90
src/coupler/: atm_comp_mod.F90  comp_interface_mod.F90  comp_wrapper_mod.F90  cpl_comp_mod.F90  ice_comp_mod.F90  lnd_comp_mod.F90  ocn_comp_mod.F90
src/coupler/esmf/: comp_wrapper_mod.F90  cpl_comp_mod.F90  ice_comp_mod.F90  lnd_comp_mod.F90  ocn_comp_mod.F90
src/drivers/: gmcore_adv_driver.F90  gmcore_driver.F90  gmcore_esmf_driver.F90  gmcore_prepare.F90  gmcore_swm_driver.F90
src/dynamics/: dynamics_types_mod.F90  filter_mod.F90  filter_types_mod.F90  gmcore_mod.F90  interp_mod.F90  mesh_mod.F90  moist_mod.F90  nh_mod.F90  operators_mod.F90  state_mod.F90  tend_mod.F90  time_schemes_mod.F90  tracer_mod.F90  tracer_types_mod.F90
src/dynamics/adv/: adv_batch_mod.F90  adv_mod.F90  ffsl_mod.F90  limiter_mod.F90  ppm_mod.F90  tvd_mod.F90  upwind_mod.F90
src/dynamics/damp/: damp_mod.F90  div_damp_mod.F90  laplace_damp_mod.F90  pole_damp_mod.F90  smag_damp_mod.F90  vor_damp_mod.F90
src/dynamics/pgf/: pgf_lin97_mod.F90  pgf_mod.F90  pgf_ptb_mod.F90  pgf_swm_mod.F90
src/dynamics/vert_coord/: hybrid_coord_mars_mod.F90  hybrid_coord_mod.F90  hybrid_coord_ncep_mod.F90  hybrid_coord_test_mod.F90  mars_vert_coord_mod.F90  sigma_coord_mod.F90  smooth_coord_mod.F90  vert_coord_mod.F90  wrf_vert_coord_mod.F90
src/meshes/cubed_sphere/: cubed_sphere_array_mod.F90  cubed_sphere_mesh_mod.F90  cubed_sphere_panel_mod.F90
src/meshes/latlon/: latlon_decomp_mod.F90  latlon_field_types_mod.F90  latlon_halo_mod.F90  latlon_interp_mod.F90  latlon_mesh_mod.F90  latlon_operators_mod.F90  latlon_parallel_mod.F90  latlon_parallel_types_mod.F90  latlon_parallel_zonal_mod.F90
src/physics/: albedo_mod.F90  dp_coupling_mod.F90  physics_mesh_mod.F90  physics_mod.F90  physics_types_mod.F90  simple_physics_v6.f90  test_forcing_mod.F90
src/physics/cam/: CMakeLists.txt  cam_interp_mod.F90  cam_physics_driver_mod.F90  dycore.F90  dyn_comp.F90  dyn_grid.F90  stepon.F90
src/physics/ccpp/: clean.sh  run.sh
src/physics/mars/: mars_cnv_nasa_mod.F90  mars_co2cyc_nasa_mod.F90  mars_data_mod.F90  mars_data_nasa_mod.F90  mars_lsm_nasa_mod.F90  mars_mp_nasa_mod.F90  mars_nasa_mod.F90  mars_pbl_nasa_mod.F90  mars_rad_nasa_mod.F90  mars_rad_rrtmgp_mod.F90  mars_sfc_nasa_mod.F90
src/physics/mars_nasa/: mars_nasa_const_mod.F90  mars_nasa_lsm_mod.F90  mars_nasa_namelist_mod.F90  mars_nasa_objects_mod.F90  mars_nasa_optics_mod.F90  mars_nasa_orbit_mod.F90  mars_nasa_pbl_mod.F90  mars_nasa_physics_driver_mod.F90  mars_nasa_physics_output_mod.F90  mars_nasa_physics_types_mod.F90  mars_nasa_rad_kcoef_mod.F90  mars_nasa_rad_mod.F90  mars_nasa_sfc_mod.F90  (+4 more)
src/prepare/: bkg_mod.F90  era5_reader_mod.F90  latlon_interp_mod.F90  mpas_reader_mod.F90  openmars_reader_mod.F90  prepare_mod.F90  ref_mod.F90  topo_mod.F90  vert_interp_mod.F90  waccm_reader_mod.F90
src/tests/: baroclinic_wave_test_mod.F90  dcmip31_test_mod.F90  held_suarez_test_mod.F90  ksp15_test_mod.F90  mars_cold_run_mod.F90  mountain_wave_test_mod.F90  rossby_haurwitz_wave_3d_test_mod.F90  steady_state_pgf_test_mod.F90  steady_state_test_mod.F90  tropical_cyclone_test_mod.F90
src/utils/: accum_mod.F90  allocator_mod.F90  block_mod.F90  const_mod.F90  debug_mod.F90  diag_state_mod.F90  formula_mod.F90  gas_mod.F90  halo_mod.F90  history_mod.F90  initial_mod.F90  math_mod.F90  namelist_mod.F90  parallel_mod.F90  parallel_types_mod.F90  parallel_zonal_mod.F90  perf_mod.F90  process_mod.F90  restart_mod.F90  sphere_geometry_mod.F90  time_mod.F90  tridiag_mkl_mod.F90  tridiag_spk_mod.F90
tools/: get_era5.py  plot_dlats.py  plot_levels.py
(+227 files in other folders)
